--- a/app/assets/javascripts/spree/ember/frontend/templates/taxonomies.handlebars
+++ b/app/assets/javascripts/spree/ember/frontend/templates/taxonomies.handlebars
@@ -1,5 +1,5 @@
-<ul>
+<div class="list-group">
   {{#each}}
-    <li>{{name}}</li>
+    <a href="#" class="list-group-item">{{name}}</a>
   {{/each}}
-</ul>
+</div>
