--- a/app/assets/javascripts/spree/ember/frontend/templates/taxonomies.handlebars
+++ b/app/assets/javascripts/spree/ember/frontend/templates/taxonomies.handlebars
@@ -1,5 +1,5 @@
 <div class="list-group">
-  {{#each taxonomies}}
-    <h1>Shop by {{taxonomies.name}}</h1>
+  {{#each}}
+    <h1>Shop by {{name}}</h1>
   {{/each}}
 </div>
