Add 'Shop by' to Sidebar

--- a/app/assets/javascripts/spree/ember/frontend/templates/taxonomies.handlebars
+++ b/app/assets/javascripts/spree/ember/frontend/templates/taxonomies.handlebars
@@ -1,5 +1,6 @@
 <div class="list-group">
   {{#each}}
+    <h4>Shop By</h4>
     <a href="#" class="list-group-item">{{name}}</a>
   {{/each}}
 </div>
