--- a/app/assets/javascripts/spree/ember/frontend/templates/taxonomies.handlebars
+++ b/app/assets/javascripts/spree/ember/frontend/templates/taxonomies.handlebars
@@ -1,5 +1,7 @@
 <div class="list-group">
   {{#each}}
-    <h1>Shop by {{root.name}}</h1>
+    <h6>Shop by {{root.name}}</h6>
+    {{#each taxon in root.taxons}}
+      {{#link-to 'taxon.permalink' taxon class="list-group-item"}}{{taxon.name}}{{/link-to}}
   {{/each}}
 </div>
