--- a/app/assets/javascripts/spree/ember/frontend/templates/taxonomies.handlebars
+++ b/app/assets/javascripts/spree/ember/frontend/templates/taxonomies.handlebars
@@ -3,5 +3,6 @@
     <h6>Shop by {{root.name}}</h6>
     {{#each taxon in root.taxons}}
       {{#link-to 'taxon.permalink' taxon class="list-group-item"}}{{taxon.name}}{{/link-to}}
+    {{/each}}
   {{/each}}
 </div>
