--- a/app/assets/javascripts/spree/ember/frontend/templates/products.handlebars
+++ b/app/assets/javascripts/spree/ember/frontend/templates/products.handlebars
@@ -2,7 +2,7 @@
   <ul>
     {{#each product in controller}}
       <li>
-        <img {{bind-attr src="product.mainImage.productUrl" alt="product.mainImage.alt"}}>
+        <img {{bind-attr src="product.mainImage.smallUrl" alt="product.mainImage.alt"}}>
         {{ product.name }}
       </li>
     {{/each}}
